--- a/style.css
+++ b/style.css
@@ -62,13 +62,21 @@ ul {
     list-style-type: none;
 }
 
-li {
+.first-li {
+    color: #343F3E;
+    list-style-type: none;
+    padding: 10px;
+    cursor: cursor;
+}
+
+.items {
     background-color: #DCEDFF;
     color: #343F3E;
     border: 1px solid transparent;
     border-radius: 1em;
     list-style-type: none;
     padding: 10px;
+    cursor: pointer;
 }
 
 .invisible {
