fix: tamanho input e conversão de px para em

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
     align-items: center;
 }
 
+#title {
+    text-align: center;
+}
+
 #lists {
     display: flex;
     flex-direction: row;
@@ -24,15 +28,15 @@ body {
 #new-task {
     border: 2px solid transparent;
     border-radius: 0.5em;
-    width: 300px;
-    height: 30px;
+    width: 90%;
+    height: 2.1em;
 }
 
 #btn-add {
-    font-size: 15px;
+    font-size: 0.9em;
     font-weight: bold;
     color: #343F3E;
-    padding: 5px;
+    padding: 0.5em;
     background-color: transparent;
     border: 2px solid #DCEDFF;
     border-radius: 0.5em;
@@ -40,7 +44,7 @@ body {
 }
 
 .card {
-    width: 200px;
+    width: 12.5em;
     border: 2px solid #DCEDFF;
     border-radius: 1em;
     padding: 1em;
@@ -57,7 +61,7 @@ body {
 ul {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 0.5em;
     padding: 0;
     list-style-type: none;
 }
@@ -65,7 +69,7 @@ ul {
 .first-li {
     color: #343F3E;
     list-style-type: none;
-    padding: 10px;
+    padding: 1em;
     cursor: cursor;
 }
 
@@ -75,7 +79,7 @@ ul {
     border: 1px solid transparent;
     border-radius: 1em;
     list-style-type: none;
-    padding: 10px;
+    padding: 1em;
     cursor: pointer;
 }
 
@@ -86,8 +90,6 @@ ul {
 @media (max-width: 750px) {
     #inputs {
         display: flex;
-        gap: 5px;
-        width: 80%;
     }
 
     #lists {
