--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ body {
     padding-top: 1em;
 }
 
+#inputs {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
 #new-task {
     border: 2px solid transparent;
     border-radius: 0.5em;
@@ -33,6 +39,7 @@ body {
 }
 
 #btn-add {
+    width: 10%;
     font-size: 0.9em;
     font-weight: bold;
     color: #343F3E;
@@ -55,6 +62,7 @@ body {
 }
 
 .card hr {
+    width: 80%;
     border-color: #343F3E;
 }
 
@@ -71,6 +79,7 @@ ul {
     list-style-type: none;
     padding: 1em;
     cursor: cursor;
+    text-align: center;
 }
 
 .items {
@@ -88,11 +97,24 @@ ul {
 }
 
 @media (max-width: 750px) {
-    #inputs {
-        display: flex;
+    #content {
+        height: 100%;
+        width: 100%;
+    }
+
+    #new-task {
+        width: 75%;
+    }
+
+    #btn-add {
+        width: 25%;
     }
 
     #lists {
         flex-direction: column;
+    }
+
+    .card {
+        width: 90%;
     }
 }
